--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
 					<span>｜</span>
 					<a href="profile_jp.html">日本語</a>
 				</p>
+  		</div>
 -->
-			</div>
 		</div>
 		<nav class="h_nav">
 			<ul class="h_ul">
-				<li><a href=index.html>&nbsp;PROFILE&nbsp;</a></li>
-				<li><a href=index_jp.html>プロフィール</a></li>
+				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
+				<li><a href=profile_en.html>PROFILE</a></li>
+				<li><a href=profile_jp.html>プロフィール</a></li>
 				<li><a href=research.html>研究</a></li>
 				<li><a href=404.html>LINKS</a></li>
 			</ul>
@@ -70,8 +71,9 @@
 			</div>
 			<nav class="globalMenuSp">
 				<ul>
-				<li><a href=index.html>&nbsp;PROFILE&nbsp;</a></li>
-				<li><a href=index_jp.html>プロフィール</a></li>
+				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
+				<li><a href=profile_en.html>PROFILE</a></li>
+				<li><a href=profile_jp.html>プロフィール</a></li>
 				<li><a href=research.html>研究</a></li>
 				<li><a href=404.html>LINKS</a></li>
 				</ul>
@@ -91,86 +93,6 @@
 			<section class="profile animation">
 				<div class="p_area">
 					<ul class="p_ul">
-						<li class="pro_li">
-							<div class="pro_img">
-								<img src="./images/profile_pic_v01.png" alt="プロフィール画像">
-							</div>
-							<div class="pro_name">
-								<div class="h3_title">
-									<h3 class="modi_f_pro h3_top">NAME</span></h3>
-								</div>
-								<div class="p_titles">
-									<ol class="p_titles_ol">
-										<li class="pro_titles_li pro_name_li">
-											Toshitaka Hammaura
-										</li>
-									</ol>
-								</div>
-								<div class="h3_title">
-									<h3 class="modi_f_pro h3_top">Current positions</span></h3>
-								</div>
-								<div class="p_titles">
-									<ol class="p_titles_ol">
-										<li class="pro_titles_li pro_name_li">
-											JSPS Research Fellow, National Center for Cognitive Behavior Therapy and Research<br>
-											National Center of Neurology and Psychiatry
-										</li>
-										<li class="pro_titles_li pro_name_li">
-											Research Fellow (PD), Japan Society for the Promotion of Science
-										</li>
-										<li class="pro_titles_li pro_name_li">
-											Invited Researcher, KDDI Research, Inc.<br>
-										</li>
-									</ol>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="h3_title">
-								<h3 class="modi_f_pro h3_top">Lisences</span></h3>
-							</div>
-							<div class="p_titles">
-								<ol class="p_titles_ol">
-									<li class="pro_titles_li pro_name_li">
-										Clinical Psychologist, Foundation of the Japanese Certification Board for Clinical Psychologists. (Japan)
-									</li>
-									<li class="pro_titles_li pro_name_li">
-										Certified Public Psychologist, Ministry of Health, Labour, and Welfare / Ministry of Education, Culture, Sports, Science and Technology. (Japan)
-									</li>
-								</ol>
-							</div>
-						</li>
-						<li>
-							<div class="h3_title">
-								<h3 class="modi_f_pu">Education</h3>
-							</div>
-							<div class="p_titles">
-								<ol class="p_titles_ol">
-									<li class="pro_titles_li">
-										2006.09-2010.05. Bachelor of Art in Psychology, Trinity Western University, Langley, BC, Canada. Minor in Business Administration.
-									</li>
-									<li class="pro_titles_li">
-										2012.04.-2015.08. Master of Science in Clinical Psychology, California State University, Fullerton, CA, USA. 
-									</li>
-									<li class="pro_titles_li">
-										2016.04.-2019/03. Doctor of Philosophy in Education (Clinical Psychology)}, University of Tokyo, Bunkyo, Tokyo, Japan.
-									</li>
-								</ol>
-							</div>
-							<div class="h3_title">
-								<h3 class="modi_f_pu">Curriculum Vitae</h3>
-							</div>
-							<div class="p_titles">
-								<ol class="p_titles_ol">
-									<li class="pro_titles_li">
-                    <a href=https://toshitaka-hamamura.github.io/cv_en/cv_en.pdf>English</a>
-									</li>
-									<li class="pro_titles_li">
-										<a href=https://toshitaka-hamamura.github.io/cv_jp/cv_jp.pdf>Japanese</a>
-									</li>
-								</ol>
-							</div>
-						</li>
 					</ul>
 				</div>
 			</section>
@@ -182,7 +104,18 @@
 				<h2 class="animation">Welcome to my personal website.</h2>
 				<p class="animation">
 					I am a researcher in Clinical Psychology and licensed therapist.<br>
-					This website does not represent my affiliations in any way.<br>
+					*This website does not represent my affiliations in any way.<br>
+					<span>
+						=====<br>
+						
+					</span>
+				</p>
+			</section>
+			<section class="section_t message">
+				<h2 class="animation">浜村俊傑のホームページへようこそ。</h2>
+				<p class="animation">
+				  公認心理師・臨床心理士として，研究と臨床に従事しています。何かのお役に立てれば幸いです。<br>
+					＊このホームページは個人が運営するものであり，所属先の活動を反映するものではありません。<br>
 					<span>
 						=====<br>
 						
@@ -198,6 +131,7 @@
 				</div>
 				<div class="h_n_area">
 					<ul class="h_n_ul">
+					  <li><span>2022.08.06</span>⽇本アルコール・アディクション医学会で発表予定です。</li>
 					  <li><span>2022.02.23</span><a href="https://doi.org/10.1111/jpr.12408">共著論文が</a>Japanese Psychological Researchに採択されました。</li>
 						<li><span>2021.12.17</span>⽇本アルコール・アディクション医学会で発表しました。</li>
 						<li><span>2021.12.14</span><a href="https://doi.org/10.1016/j.abrep.2021.100400">筆頭論文</a>がAddictive Behaviors Reportsに採択されました。</li>
