--- a/profile_en.html
+++ b/profile_en.html
@@ -44,21 +44,23 @@
 			<div class="title">
 				<h1>Toshitaka Hamamura, Ph.D.</h1>
 			</div>
+<!-- 
 			<div class="lang">
 				<p>
 					<a href="profile.html">English</a>
 					<span>｜</span>
 					<a href="profile_jp.html">日本語</a>
 				</p>
-			</div>
+  		</div>
+-->
 		</div>
 		<nav class="h_nav">
 			<ul class="h_ul">
 				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
-				<li><a href=profile.html>PROFILE</a></li>
-				<li><a href=research.html>RESEARCH</a></li>
-				<li><a href=publication.html>LINKS</a></li>
-				<li><a href=”#”>CONACTS</a></li>
+				<li><a href=profile_en.html>PROFILE</a></li>
+				<li><a href=profile_jp.html>プロフィール</a></li>
+				<li><a href=research.html>研究</a></li>
+				<li><a href=404.html>LINKS</a></li>
 			</ul>
 		</nav>
 		<div class="h_nav_sp">
@@ -69,11 +71,11 @@
 			</div>
 			<nav class="globalMenuSp">
 				<ul>
-					<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
-					<li><a href=profile.html>PROFILE</a></li>
-					<li><a href=research.html>RESEARCH</a></li>
-					<li><a href=publication.html>LINKS</a></li>
-					<li><a href=”#”>CONACTS</a></li>
+				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
+				<li><a href=profile_en.html>PROFILE</a></li>
+				<li><a href=profile_jp.html>プロフィール</a></li>
+				<li><a href=research.html>研究</a></li>
+				<li><a href=404.html>LINKS</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -102,7 +104,7 @@
 								<div class="p_titles">
 									<ol class="p_titles_ol">
 										<li class="pro_titles_li pro_name_li">
-											Toshitaka Hammaura
+											<b>Toshitaka Hammaura</b>
 										</li>
 									</ol>
 								</div>
@@ -112,14 +114,17 @@
 								<div class="p_titles">
 									<ol class="p_titles_ol">
 										<li class="pro_titles_li pro_name_li">
-											JSPS Research Fellow, National Center for Cognitive Behavior Therapy and Research<br>
+											<b>JSPS Research Fellow,</b><br>
+											National Center for Cognitive Behavior Therapy and Research,<br>
 											National Center of Neurology and Psychiatry
 										</li>
 										<li class="pro_titles_li pro_name_li">
-											Research Fellow (PD), Japan Society for the Promotion of Science
+											<b>Research Fellow (PD),</b><br>
+											Japan Society for the Promotion of Science
 										</li>
 										<li class="pro_titles_li pro_name_li">
-											Invited Researcher, KDDI Research, Inc.<br>
+											<b>Invited Researcher,</b><br>
+											KDDI Research, Inc.<br>
 										</li>
 									</ol>
 								</div>
@@ -132,10 +137,12 @@
 							<div class="p_titles">
 								<ol class="p_titles_ol">
 									<li class="pro_titles_li pro_name_li">
-										Clinical Psychologist, Foundation of the Japanese Certification Board for Clinical Psychologists. (Japan)
+										<b>Clinical Psychologist,</b><br>
+										Foundation of the Japanese Certification Board for Clinical Psychologists. (Japan)
 									</li>
 									<li class="pro_titles_li pro_name_li">
-										Certified Public Psychologist, Ministry of Health, Labour, and Welfare / Ministry of Education, Culture, Sports, Science and Technology. (Japan)
+										<b>Certified Public Psychologist,</b><br>
+										Ministry of Health, Labour, and Welfare / Ministry of Education, Culture, Sports, Science and Technology. (Japan)
 									</li>
 								</ol>
 							</div>
@@ -147,13 +154,13 @@
 							<div class="p_titles">
 								<ol class="p_titles_ol">
 									<li class="pro_titles_li">
-										2006.09-2010.05. Bachelor of Art in Psychology, Trinity Western University, Langley, BC, Canada. Minor in Business Administration.
+										2006.09-2010.05. <b>Bachelor of Art in Psychology,</b> Trinity Western University, Langley, BC, Canada. Minor in Business Administration.
 									</li>
 									<li class="pro_titles_li">
-										2012.04.-2015.08. Master of Science in Clinical Psychology, California State University, Fullerton, CA, USA. 
+										2012.04.-2015.08. <b>Master of Science in Clinical Psychology,</b> California State University, Fullerton, CA, USA. 
 									</li>
 									<li class="pro_titles_li">
-										2016.04.-2019/03. Doctor of Philosophy in Education (Clinical Psychology)}, University of Tokyo, Bunkyo, Tokyo, Japan.
+										2016.04.-2019/03. <b>Doctor of Philosophy in Education (Clinical Psychology),</b> University of Tokyo, Bunkyo, Tokyo, Japan.
 									</li>
 								</ol>
 							</div>
@@ -250,3 +257,4 @@
 	</footer>
 </body>
 </html>
+  
