--- a/profile_jp.html
+++ b/profile_jp.html
@@ -102,7 +102,7 @@
 								<div class="p_titles">
 									<ol class="p_titles_ol">
 										<li class="pro_titles_li pro_name_li">
-											浜村　俊傑（はまむら　としたか）
+											<b>浜村　俊傑（はまむら　としたか）</b>
 										</li>
 									</ol>
 								</div>
@@ -112,15 +112,13 @@
 								<div class="p_titles">
 									<ol class="p_titles_ol">
 										<li class="pro_titles_li pro_name_li">
-											国⽴研究開発法⼈国⽴精神・神経医療研究センター<br>
-											認知⾏動療法センター
+											・国⽴研究開発法⼈国⽴精神・神経医療研究センター：認知⾏動療法センター：<b>外来研究員</b>
 										</li>
 										<li class="pro_titles_li pro_name_li">
-											⽇本学術振興会特別研究員（PD）
+											・⽇本学術振興会：<b>特別研究員（PD）</b>
 										</li>
 										<li class="pro_titles_li pro_name_li">
-											株式会社KDDI 総合研究所 健康⾏動変容グループ<br>
-											招聘研究員
+											・株式会社KDDI 総合研究所 健康⾏動変容グループ：<b>招聘研究員</b>
 										</li>
 									</ol>
 								</div>
@@ -133,10 +131,10 @@
 							<div class="p_titles">
 								<ol class="p_titles_ol">
 									<li class="pro_titles_li pro_name_li">
-										⽇本臨床⼼理⼠資格認定協会 臨床⼼理⼠
+										⽇本臨床⼼理⼠資格認定協会：<b>臨床⼼理⼠</b>
 									</li>
 									<li class="pro_titles_li pro_name_li">
-										厚⽣労働省・⽂部科学省 公認⼼理師
+										厚⽣労働省・⽂部科学省：<b>公認⼼理師</b>
 									</li>
 								</ol>
 							</div>
@@ -146,19 +144,19 @@
 							<div class="p_titles">
 								<ol class="p_titles_ol">
 									<li class="pro_titles_li">
-										2010年09⽉〜2012年06⽉ 発達障害団体（Developmental Disabilities Association）
+										2010年09⽉〜2012年06⽉ 発達障害団体（Developmental Disabilities Association）：<b>Residential Care Worker</b>
 									</li>
 									<li class="pro_titles_li">
-										2017年04⽉〜2019年03⽉ ⽇本学術振興会特別研究員（DC2）（受⼊機関／東京⼤学）
+										2017年04⽉〜2019年03⽉ ⽇本学術振興会（受⼊機関／東京⼤学）：<b>特別研究員（DC2）</b>
 									</li>
 									<li class="pro_titles_li">
-										2019年04⽉〜2020年03⽉ 株式会社KDDI 総合研究所 研究員
+										2019年04⽉〜2020年03⽉ 株式会社KDDI総合研究所：<b>研究員</b>
 									</li>
 									<li class="pro_titles_li">
-										2020年04⽉〜現在 ⽇本学術振興会特別研究員（PD）（受⼊機関／国⽴精神・神経医療研究センター）
+										2020年04⽉〜現在 ⽇本学術振興会（受⼊機関／国⽴精神・神経医療研究センター）：<b>特別研究員（PD）</b>
 									</li>
 									<li class="pro_titles_li">
-										2019年04⽉〜現在 株式会社KDDI 総合研究所 招聘研究員
+										2019年04⽉〜現在 株式会社KDDI総合研究所：<b>招聘研究員</b>
 									</li>
 								</ol>
 							</div>
