--- a/link.html
+++ b/link.html
@@ -51,12 +51,14 @@
 					<span>｜</span>
 					<a href="profile_jp.html">日本語</a>
 				</p>
+  		</div>
 -->
 		</div>
 		<nav class="h_nav">
 			<ul class="h_ul">
-				<li><a href=index.html>&nbsp;PROFILE&nbsp;</a></li>
-				<li><a href=index_jp.html>プロフィール</a></li>
+				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
+				<li><a href=profile_en.html>PROFILE</a></li>
+				<li><a href=profile_jp.html>プロフィール</a></li>
 				<li><a href=research.html>研究</a></li>
 				<li><a href=404.html>LINKS</a></li>
 			</ul>
@@ -69,11 +71,11 @@
 			</div>
 			<nav class="globalMenuSp">
 				<ul>
-					<li><a href=index.html>&nbsp;ホーム&nbsp;</a></li>
-					<li><a href=profile.html>プロフィール</a></li>
-					<li><a href=research.html>研究内容</a></li>
-					<li><a href=publication.html>業績など</a></li>
-					<li><a href=”#”>連絡先</a></li>
+				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
+				<li><a href=profile_en.html>PROFILE</a></li>
+				<li><a href=profile_jp.html>プロフィール</a></li>
+				<li><a href=research.html>研究</a></li>
+				<li><a href=404.html>LINKS</a></li>
 				</ul>
 			</nav>
 		</div>
