--- a/research.html
+++ b/research.html
@@ -51,16 +51,34 @@
 					<span>｜</span>
 					<a href="profile_jp.html">日本語</a>
 				</p>
+  		</div>
 -->
 		</div>
 		<nav class="h_nav">
 			<ul class="h_ul">
-				<li><a href=index.html>&nbsp;PROFILE&nbsp;</a></li>
-				<li><a href=index_jp.html>プロフィール</a></li>
+				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
+				<li><a href=profile_en.html>PROFILE</a></li>
+				<li><a href=profile_jp.html>プロフィール</a></li>
 				<li><a href=research.html>研究</a></li>
 				<li><a href=404.html>LINKS</a></li>
 			</ul>
 		</nav>
+		<div class="h_nav_sp">
+			<div class="hamburger">
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+			<nav class="globalMenuSp">
+				<ul>
+				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
+				<li><a href=profile_en.html>PROFILE</a></li>
+				<li><a href=profile_jp.html>プロフィール</a></li>
+				<li><a href=research.html>研究</a></li>
+				<li><a href=404.html>LINKS</a></li>
+				</ul>
+			</nav>
+		</div>
 		<div class="h_img animation">
 			<img src="./images/research_v01.png" alt="ヘッダー画像">
 			<div class="section_t page_title">
