--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 			<ul class="h_ul">
 				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
 				<li><a href=profile_en.html>PROFILE</a></li>
+				<li><a href=cv.html>CV</a></li>
 				<li><a href=profile_jp.html>プロフィール</a></li>
 				<li><a href=research.html>研究</a></li>
 				<li><a href=404.html>LINKS</a></li>
@@ -131,7 +132,6 @@
 				</div>
 				<div class="h_n_area">
 					<ul class="h_n_ul">
-					  <li><span>2022.08.06</span>⽇本アルコール・アディクション医学会で発表予定です。</li>
 					  <li><span>2022.02.23</span><a href="https://doi.org/10.1111/jpr.12408">共著論文が</a>Japanese Psychological Researchに採択されました。</li>
 						<li><span>2021.12.17</span>⽇本アルコール・アディクション医学会で発表しました。</li>
 						<li><span>2021.12.14</span><a href="https://doi.org/10.1016/j.abrep.2021.100400">筆頭論文</a>がAddictive Behaviors Reportsに採択されました。</li>
@@ -151,7 +151,7 @@
 				</div>
 				<div class="h_n_area">
 					<ul class="h_n_ul">
-						<li><span></span><a href="#">公開できる予定はありません。</a></li>
+					  <li><span>2022.08.06</span>⽇本アルコール・アディクション医学会で発表予定です。</li>
 					</ul>
 					<div class="blur"></div>
 				</div>
