--- a/profile_en.html
+++ b/profile_en.html
@@ -58,6 +58,7 @@
 			<ul class="h_ul">
 				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
 				<li><a href=profile_en.html>PROFILE</a></li>
+				<li><a href=cv.html>CV</a></li>
 				<li><a href=profile_jp.html>プロフィール</a></li>
 				<li><a href=research.html>研究</a></li>
 				<li><a href=404.html>LINKS</a></li>
@@ -80,14 +81,14 @@
 			</nav>
 		</div>
 		<div class="h_img animation">
-			<img src="./images/home_v01.png" alt="ヘッダー画像">
+			<img src="./images/profile_v01.png" alt="ヘッダー画像">
 			<div class="section_t page_title">
 				<h2>
-					Welcome
+					Profile
 				</h2>
 			</div>
 		</div>
-	</header>
+	  </header>
 	<main>
 		<article>
 			<section class="profile animation">
@@ -179,54 +180,6 @@
 							</div>
 						</li>
 					</ul>
-				</div>
-			</section>
-		</article>
-	</main>
-  <main>
-		<article>
-			<section class="section_t message">
-				<h2 class="animation">Welcome to my personal website.</h2>
-				<p class="animation">
-					I am a researcher in Clinical Psychology and licensed therapist.<br>
-					This website does not represent my affiliations in any way.<br>
-					<span>
-						=====<br>
-						
-					</span>
-				</p>
-			</section>
-			<section class="home_news animation">
-				<div class="section_t">
-					<h2>
-						NEWS
-						<span>news</span>
-					</h2>
-				</div>
-				<div class="h_n_area">
-					<ul class="h_n_ul">
-					  <li><span>2022.02.23</span><a href="https://doi.org/10.1111/jpr.12408">共著論文が</a>Japanese Psychological Researchに採択されました。</li>
-						<li><span>2021.12.17</span>⽇本アルコール・アディクション医学会で発表しました。</li>
-						<li><span>2021.12.14</span><a href="https://doi.org/10.1016/j.abrep.2021.100400">筆頭論文</a>がAddictive Behaviors Reportsに採択されました。</li>
-						<li><span>2021.02.05</span>ウェブサイトを立ち上げました。</li>
-					</ul>
-				</div>
-				<div class="btn animation">
-					<a href="#" class="arrow2">More</a>
-				</div>
-			</section>
-			<section class="home_schedule animation">
-				<div class="section_t">
-					<h2>
-						今後の予定
-						<span>schedule</span>
-					</h2>
-				</div>
-				<div class="h_n_area">
-					<ul class="h_n_ul">
-						<li><span></span><a href="#">公開できる予定はありません。</a></li>
-					</ul>
-					<div class="blur"></div>
 				</div>
 			</section>
 		</article>
