--- a/profile_jp.html
+++ b/profile_jp.html
@@ -51,12 +51,15 @@
 					<span>｜</span>
 					<a href="profile_jp.html">日本語</a>
 				</p>
+  		</div>
 -->
 		</div>
 		<nav class="h_nav">
 			<ul class="h_ul">
-				<li><a href=index.html>&nbsp;PROFILE&nbsp;</a></li>
-				<li><a href=index_jp.html>プロフィール</a></li>
+				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
+				<li><a href=profile_en.html>PROFILE</a></li>
+				<li><a href=cv.html>CV</a></li>
+				<li><a href=profile_jp.html>プロフィール</a></li>
 				<li><a href=research.html>研究</a></li>
 				<li><a href=404.html>LINKS</a></li>
 			</ul>
@@ -69,19 +72,19 @@
 			</div>
 			<nav class="globalMenuSp">
 				<ul>
-					<li><a href=index.html>&nbsp;ホーム&nbsp;</a></li>
-					<li><a href=profile.html>プロフィール</a></li>
-					<li><a href=research.html>研究内容</a></li>
-					<li><a href=publication.html>業績など</a></li>
-					<li><a href=”#”>連絡先</a></li>
+				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
+				<li><a href=profile_en.html>PROFILE</a></li>
+				<li><a href=profile_jp.html>プロフィール</a></li>
+				<li><a href=research.html>研究</a></li>
+				<li><a href=404.html>LINKS</a></li>
 				</ul>
 			</nav>
 		</div>
 		<div class="h_img animation">
-			<img src="./images/home_v01.png" alt="ヘッダー画像">
+			<img src="./images/profile_v01.png" alt="ヘッダー画像">
 			<div class="section_t page_title">
 				<h2>
-					Welcome
+					プロフィール
 				</h2>
 			</div>
 		</div>
