--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<li><a href=cv.html>CV</a></li>
 				<li><a href=profile_jp.html>プロフィール</a></li>
 				<li><a href=research.html>研究</a></li>
-				<li><a href=404.html>LINKS</a></li>
+				<li><a href=link.html>LINKS</a></li>
 			</ul>
 		</nav>
 		<div class="h_nav_sp">
@@ -76,7 +76,7 @@
 				<li><a href=profile_en.html>PROFILE</a></li>
 				<li><a href=profile_jp.html>プロフィール</a></li>
 				<li><a href=research.html>研究</a></li>
-				<li><a href=404.html>LINKS</a></li>
+				<li><a href=link.html>LINKS</a></li>
 				</ul>
 			</nav>
 		</div>
