--- a/profile_jp.html
+++ b/profile_jp.html
@@ -61,7 +61,7 @@
 				<li><a href=cv.html>CV</a></li>
 				<li><a href=profile_jp.html>プロフィール</a></li>
 				<li><a href=research.html>研究</a></li>
-				<li><a href=404.html>LINKS</a></li>
+				<li><a href=link.html>LINKS</a></li>
 			</ul>
 		</nav>
 		<div class="h_nav_sp">
@@ -181,19 +181,6 @@
 									</li>
 									<li class="pro_titles_li">
 										2016年04⽉〜2019年03⽉ 東京⼤学 ⼤学院教育学研究科 総合教育科学専攻 ⼼⾝発達科学専修<br>臨床⼼理学コース 博⼠課程
-									</li>
-								</ol>
-							</div>
-							<div class="h3_title">
-								<h3 class="modi_f_pu">職務経歴書（Curriculum Vitae）</h3>
-							</div>
-							<div class="p_titles">
-								<ol class="p_titles_ol">
-									<li class="pro_titles_li">
-										<a href=https://toshitaka-hamamura.github.io/cv_jp/cv_jp.pdf>日本語</a>
-									</li>
-									<li class="pro_titles_li">
-                    <a href=https://toshitaka-hamamura.github.io/cv_en/cv_en.pdf>English</a>
 									</li>
 								</ol>
 							</div>
