--- a/link.html
+++ b/link.html
@@ -44,15 +44,6 @@
 			<div class="title">
 				<h1>Toshitaka Hamamura, Ph.D.</h1>
 			</div>
-<!-- 
-			<div class="lang">
-				<p>
-					<a href="profile.html">English</a>
-					<span>｜</span>
-					<a href="profile_jp.html">日本語</a>
-				</p>
-  		</div>
--->
 		</div>
 		<nav class="h_nav">
 			<ul class="h_ul">
@@ -61,28 +52,11 @@
 				<li><a href=cv.html>CV</a></li>
 				<li><a href=profile_jp.html>プロフィール</a></li>
 				<li><a href=research.html>研究</a></li>
-				<li><a href=404.html>LINKS</a></li>
+				<li><a href=link.html>LINKS</a></li>
 			</ul>
 		</nav>
-		<div class="h_nav_sp">
-			<div class="hamburger">
-				<span></span>
-				<span></span>
-				<span></span>
-			</div>
-			<nav class="globalMenuSp">
-				<ul>
-				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
-				<li><a href=profile_en.html>PROFILE</a></li>
-				<li><a href=cv.html>CV</a></li>
-				<li><a href=profile_jp.html>プロフィール</a></li>
-				<li><a href=research.html>研究</a></li>
-				<li><a href=404.html>LINKS</a></li>
-				</ul>
-			</nav>
-		</div>
 		<div class="h_img animation">
-			<img src="./images/research_v01.png" alt="ヘッダー画像">
+			<img src="./images/home_v01.png" alt="ヘッダー画像">
 			<div class="section_t page_title">
 				<h2>
 					LINK
@@ -92,7 +66,18 @@
 	</header>
 	<main>
 		<article>
-		  
+			<section class="section_t message">
+				<h2 class="animation">External</h2>
+				<p class="animation">
+					<a href="https://scholar.google.co.jp/citations?user=gJtBwZsAAAAJ&hl=en">Google Scholar</a><br>
+					<a href="https://researchmap.jp/toshitakahamamura/?lang=english">Research Map</a><br>
+					<a href="osf.io/nuhbp">Open Science Framework</a><br>
+					<a href="https://www.linkedin.com/in/toshitaka-hamamura-1195b998/"><i class="fa-brands fa-linkedin"></i>LinkedIn</a>
+						
+					<br>
+				</p>
+			</section>
+		</section>
 		</article>
 	</main>
 	<footer>
@@ -107,6 +92,7 @@
 					<a href="https://twitter.com/hamamura_toshi"><i class="fa fa-twitter"></i></a>
 					<a href="https://www.facebook.com/toshitaka.hamamura/"><i class="fa fa-facebook"></i></a>
 					<a href="https://github.com/toshitaka-hamamura"><i class="fa fa-github"></i></a>
+					<a href="https://www.researchgate.net/profile/Toshitaka-Hamamura"><i class="fa-brands fa-researchgate"></i></a>
 					<div class="contacts_sp">
 						<p><i class="fa fa-envelope"></i>toshitaka.hamamura@gmail.com</p>
 						<!-- <p><i class="fa fa-phone-square"></i>000-0000-0000</p> -->
