--- a/profile_en.html
+++ b/profile_en.html
@@ -61,7 +61,7 @@
 				<li><a href=cv.html>CV</a></li>
 				<li><a href=profile_jp.html>プロフィール</a></li>
 				<li><a href=research.html>研究</a></li>
-				<li><a href=404.html>LINKS</a></li>
+				<li><a href=link.html>LINKS</a></li>
 			</ul>
 		</nav>
 		<div class="h_nav_sp">
@@ -162,19 +162,6 @@
 									</li>
 									<li class="pro_titles_li">
 										2016.04.-2019/03. <b>Doctor of Philosophy in Education (Clinical Psychology),</b> University of Tokyo, Bunkyo, Tokyo, Japan.
-									</li>
-								</ol>
-							</div>
-							<div class="h3_title">
-								<h3 class="modi_f_pu">Curriculum Vitae</h3>
-							</div>
-							<div class="p_titles">
-								<ol class="p_titles_ol">
-									<li class="pro_titles_li">
-                    <a href=https://toshitaka-hamamura.github.io/cv_en/cv_en.pdf>English</a>
-									</li>
-									<li class="pro_titles_li">
-										<a href=https://toshitaka-hamamura.github.io/cv_jp/cv_jp.pdf>Japanese</a>
 									</li>
 								</ol>
 							</div>
