--- a/cv.html
+++ b/cv.html
@@ -104,6 +104,34 @@
 				</div>
 			</section>
 		</article>
+	</main>
+	<footer>
+		<div class="f_wrapper">
+			<div class="links">
+				<div class="contacts">
+					<p><i class="fa fa-envelope"></i>toshitaka.hamamura@gmail.com</p>
+					<!-- <p><i class="fa fa-phone-square"></i>000-0000-0000</p> -->
+					<!-- <p><i class="fa fa-address-card"></i>東京都⽂京区××△△10-0-5</p> -->
+				</div>
+				<div class="sns">
+					<a href="https://twitter.com/hamamura_toshi"><i class="fa fa-twitter"></i></a>
+					<a href="https://www.facebook.com/toshitaka.hamamura"><i class="fa fa-facebook"></i></a>
+					<a href="https://www.linkedin.com/in/toshitaka-hamamura-1195b998"><i class="fa-brands fa-linkedin"></i></a>
+					<a href="https://www.researchgate.net/profile/Toshitaka-Hamamura"><i class="fa-brands fa-researchgate"></i></a>
+					<a href="https://github.com/toshitaka-hamamura"><i class="fa fa-github"></i></a>
+					<div class="contacts_sp">
+						<p><i class="fa fa-envelope"></i>toshitaka.hamamura@gmail.com</p>
+						<!-- <p><i class="fa fa-phone-square"></i>000-0000-0000</p> -->
+						<!-- <p><i class="fa fa-address-card"></i>東京都⽂京区××△△10-0-5</p> -->
+					</div>
+				</div>
+			</div>
+			<div class="copy">
+				<p>&copy; 2022 Toshitaka Hamamura. All Rights Reserved.</p>
+			</div>
+		</div>
+	</footer>
+
 </body>
 
 </html>
