--- a/link.html
+++ b/link.html
@@ -67,13 +67,12 @@
 	<main>
 		<article>
 			<section class="section_t message">
-				<h2 class="animation">External</h2>
+				<h2 class="animation">External Links</h2>
 				<p class="animation">
 					<a href="https://scholar.google.co.jp/citations?user=gJtBwZsAAAAJ&hl=en">Google Scholar</a><br>
 					<a href="https://researchmap.jp/toshitakahamamura/?lang=english">Research Map</a><br>
 					<a href="osf.io/nuhbp">Open Science Framework</a><br>
-					<a href="https://www.linkedin.com/in/toshitaka-hamamura-1195b998/"><i class="fa-brands fa-linkedin"></i>LinkedIn</a>
-						
+					<a href="https://orcid.org/0000-0002-0719-1001">ORCiD</a>
 					<br>
 				</p>
 			</section>
@@ -90,9 +89,10 @@
 				</div>
 				<div class="sns">
 					<a href="https://twitter.com/hamamura_toshi"><i class="fa fa-twitter"></i></a>
-					<a href="https://www.facebook.com/toshitaka.hamamura/"><i class="fa fa-facebook"></i></a>
-					<a href="https://github.com/toshitaka-hamamura"><i class="fa fa-github"></i></a>
+					<a href="https://www.facebook.com/toshitaka.hamamura"><i class="fa fa-facebook"></i></a>
+					<a href="https://www.linkedin.com/in/toshitaka-hamamura-1195b998"><i class="fa-brands fa-linkedin"></i></a>
 					<a href="https://www.researchgate.net/profile/Toshitaka-Hamamura"><i class="fa-brands fa-researchgate"></i></a>
+					<a href="https://github.com/toshitaka-hamamura"><i class="fa fa-github"></i></a>
 					<div class="contacts_sp">
 						<p><i class="fa fa-envelope"></i>toshitaka.hamamura@gmail.com</p>
 						<!-- <p><i class="fa fa-phone-square"></i>000-0000-0000</p> -->
@@ -101,7 +101,7 @@
 				</div>
 			</div>
 			<div class="copy">
-				<p>&copy; 2021 Toshitaka Hamamura. All Rights Reserved.</p>
+				<p>&copy; 2022 Toshitaka Hamamura. All Rights Reserved.</p>
 			</div>
 		</div>
 	</footer>
