--- a/profile_jp.html
+++ b/profile_jp.html
@@ -201,6 +201,8 @@
 				<div class="sns">
 					<a href="https://twitter.com/hamamura_toshi"><i class="fa fa-twitter"></i></a>
 					<a href="https://www.facebook.com/toshitaka.hamamura/"><i class="fa fa-facebook"></i></a>
+					<a href="https://www.linkedin.com/in/toshitaka-hamamura-1195b998/"><i class="fa-brands fa-linkedin"></i></a>
+					<a href="https://www.researchgate.net/profile/Toshitaka-Hamamura"><i class="fa-brands fa-researchgate"></i></a>
 					<a href="https://github.com/toshitaka-hamamura"><i class="fa fa-github"></i></a>
 					<div class="contacts_sp">
 						<p><i class="fa fa-envelope"></i>toshitaka.hamamura@gmail.com</p>
@@ -210,7 +212,7 @@
 				</div>
 			</div>
 			<div class="copy">
-				<p>&copy; 2021 Toshitaka Hamamura. All Rights Reserved.</p>
+				<p>&copy; 2022 Toshitaka Hamamura. All Rights Reserved.</p>
 			</div>
 		</div>
 	</footer>
