--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
 				<div class="sns">
 					<a href="https://twitter.com/hamamura_toshi"><i class="fa fa-twitter"></i></a>
 					<a href="https://www.facebook.com/toshitaka.hamamura/"><i class="fa fa-facebook"></i></a>
-					<a href="https://www.linkedin.com/in/toshitaka-hamamura-1195b998/"><i class="fa-brands fa-linkedin"></i></a>
-					<a href="https://www.researchgate.net/profile/Toshitaka-Hamamura"><i class="fa-brands fa-researchgate"></i></a>
+					<a href="https://www.linkedin.com/in/toshitaka-hamamura-1195b998/"><i class="fa fa-linkedin"></i></a>
+					<a href="https://www.researchgate.net/profile/Toshitaka-Hamamura"><i class="fa fa-researchgate"></i></a>
 					<a href="https://github.com/toshitaka-hamamura"><i class="fa fa-github"></i></a>
 					<div class="contacts_sp">
 						<p><i class="fa fa-envelope"></i>toshitaka.hamamura@gmail.com</p>
