--- a/cv.html
+++ b/cv.html
@@ -49,8 +49,8 @@
 			<ul class="h_ul">
 				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
 				<li><a href=profile_en.html>PROFILE</a></li>
-				<li><a href=cv.html>CV</a></li>
 				<li><a href=profile_jp.html>プロフィール</a></li>
+				<li><a href=cv.html>CV</a></li>
 				<li><a href=research.html>研究</a></li>
 				<li><a href=link.html>LINKS</a></li>
 			</ul>
@@ -63,12 +63,13 @@
 			</div>
 			<nav class="globalMenuSp">
 				<ul>
-				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
-				<li><a href=profile_en.html>PROFILE</a></li>
-				<li><a href=profile_jp.html>プロフィール</a></li>
-				<li><a href=research.html>研究</a></li>
-				<li><a href=404.html>LINKS</a></li>
-				</ul>
+					<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
+					<li><a href=profile_en.html>PROFILE</a></li>
+					<li><a href=profile_jp.html>プロフィール</a></li>
+					<li><a href=cv.html>CV</a></li>
+					<li><a href=research.html>研究</a></li>
+					<li><a href=link.html>LINKS</a></li>
+					</ul>
 			</nav>
 		</div>
 		<div class="h_img animation">
