--- a/profile_en.html
+++ b/profile_en.html
@@ -59,9 +59,9 @@
 				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
 				<li><a href=profile_en.html>PROFILE</a></li>
 				<li><a href=cv.html>CV</a></li>
+				<li><a href=link.html>LINKS</a></li>
 				<li><a href=profile_jp.html>プロフィール</a></li>
 				<li><a href=research.html>研究</a></li>
-				<li><a href=link.html>LINKS</a></li>
 			</ul>
 		</nav>
 		<div class="h_nav_sp">
@@ -69,16 +69,17 @@
 				<span></span>
 				<span></span>
 				<span></span>
-			</div>
-			<nav class="globalMenuSp">
-				<ul>
+		</div>
+		<nav class="globalMenuSp">
+			<ul>
 				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
 				<li><a href=profile_en.html>PROFILE</a></li>
+				<li><a href=cv.html>CV</a></li>
+				<li><a href=link.html>LINKS</a></li>
 				<li><a href=profile_jp.html>プロフィール</a></li>
 				<li><a href=research.html>研究</a></li>
-				<li><a href=404.html>LINKS</a></li>
-				</ul>
-			</nav>
+			</ul>
+		</nav>
 		</div>
 		<div class="h_img animation">
 			<img src="./images/profile_v01.png" alt="ヘッダー画像">
