--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
 				<li><a href=profile_en.html>PROFILE</a></li>
 				<li><a href=cv.html>CV</a></li>
+				<li><a href=link.html>LINKS</a></li>
 				<li><a href=profile_jp.html>プロフィール</a></li>
 				<li><a href=research.html>研究</a></li>
-				<li><a href=link.html>LINKS</a></li>
 			</ul>
 		</nav>
 		<div class="h_nav_sp">
@@ -72,11 +72,12 @@
 			</div>
 			<nav class="globalMenuSp">
 				<ul>
-				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
-				<li><a href=profile_en.html>PROFILE</a></li>
-				<li><a href=profile_jp.html>プロフィール</a></li>
-				<li><a href=research.html>研究</a></li>
-				<li><a href=link.html>LINKS</a></li>
+					<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
+					<li><a href=profile_en.html>PROFILE</a></li>
+					<li><a href=cv.html>CV</a></li>
+					<li><a href=link.html>LINKS</a></li>
+					<li><a href=profile_jp.html>プロフィール</a></li>
+					<li><a href=research.html>研究</a></li>
 				</ul>
 			</nav>
 		</div>
