--- a/publication.html
+++ b/publication.html
@@ -54,11 +54,12 @@
 		</div>
 		<nav class="h_nav">
 			<ul class="h_ul">
-				<li><a href=index.html>&nbsp;ホーム&nbsp;</a></li>
-				<li><a href=profile.html>プロフィール</a></li>
-				<li><a href=research.html>研究内容</a></li>
-				<li><a href=publication.html>業績など</a></li>
-				<li><a href=”#”>連絡先</a></li>
+				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
+				<li><a href=profile_en.html>PROFILE</a></li>
+				<li><a href=cv.html>CV</a></li>
+				<li><a href=link.html>LINKS</a></li>
+				<li><a href=profile_jp.html>プロフィール</a></li>
+				<li><a href=research.html>研究</a></li>
 			</ul>
 		</nav>
 		<div class="h_nav_sp">
@@ -69,11 +70,12 @@
 			</div>
 			<nav class="globalMenuSp">
 				<ul>
-					<li><a href=index.html>&nbsp;ホーム&nbsp;</a></li>
-					<li><a href=profile.html>プロフィール</a></li>
-					<li><a href=research.html>研究内容</a></li>
-					<li><a href=publication.html>業績など</a></li>
-					<li><a href=”#”>連絡先</a></li>
+					<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
+					<li><a href=profile_en.html>PROFILE</a></li>
+					<li><a href=cv.html>CV</a></li>
+					<li><a href=link.html>LINKS</a></li>
+					<li><a href=profile_jp.html>プロフィール</a></li>
+					<li><a href=research.html>研究</a></li>
 				</ul>
 			</nav>
 		</div>
