--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
 				</div>
 				<div class="h_n_area">
 					<ul class="h_n_ul">
-					  <li><span>2022.02.23</span><a href="https://doi.org/10.1111/jpr.12408">共著論文が</a>Japanese Psychological Researchに採択されました。</li>
-						<li><span>2021.12.17</span>⽇本アルコール・アディクション医学会で発表しました。</li>
+						<li><span>2022.09.09</span>2022年度アルコール・薬物依存関連学会合同学術総会で口頭発表しました。</li>
+						<li><span>2021.12.17</span>2021年度アルコール・薬物依存関連学会合同学術総会で口頭発表しました。</li>
 						<li><span>2021.12.14</span><a href="https://doi.org/10.1016/j.abrep.2021.100400">筆頭論文</a>がAddictive Behaviors Reportsに採択されました。</li>
 						<li><span>2021.02.05</span>ウェブサイトを立ち上げました。</li>
 					</ul>
@@ -152,7 +152,7 @@
 				</div>
 				<div class="h_n_area">
 					<ul class="h_n_ul">
-					  <li><span>2022.08.06</span>⽇本アルコール・アディクション医学会で発表予定です。</li>
+					  <li><span></span>公開できる予定はありません。</li>
 					</ul>
 					<div class="blur"></div>
 				</div>
