--- a/index.html
+++ b/index.html
@@ -136,11 +136,10 @@
 						<li><span>2022.09.09</span>2022年度アルコール・薬物依存関連学会合同学術総会で口頭発表しました。</li>
 						<li><span>2021.12.17</span>2021年度アルコール・薬物依存関連学会合同学術総会で口頭発表しました。</li>
 						<li><span>2021.12.14</span><a href="https://doi.org/10.1016/j.abrep.2021.100400">筆頭論文</a>がAddictive Behaviors Reportsに採択されました。</li>
-						<li><span>2021.02.05</span>ウェブサイトを立ち上げました。</li>
 					</ul>
 				</div>
 				<div class="btn animation">
-					<a href="#" class="arrow2">More</a>
+					<a href="news.html" class="arrow2">More</a>
 				</div>
 			</section>
 			<section class="home_schedule animation">
