--- a/news.html
+++ b/news.html
@@ -113,7 +113,9 @@
 					<ul class="h_n_ul">
 						<li><span>2022.09.09</span>2022年度アルコール・薬物依存関連学会合同学術総会で口頭発表しました。</li>
 						<li><span>2021.12.17</span>2021年度アルコール・薬物依存関連学会合同学術総会で口頭発表しました。</li>
-						<li><span>2021.12.14</span><a href="https://doi.org/10.1016/j.abrep.2021.100400">筆頭論文</a>がAddictive Behaviors Reportsに採択されました。</li>
+						<li><span>2021.12.14</span><a href="https://doi.org/10.1016/j.abrep.2021.100400">A lead-author manuscript</a> was accepted at Addictive Behaviors Reports.</li>
+						<li><span>2021.10.19</span><a href="https://doi.org/10.1038/s41398-021-01696-x">A co-author manuscript</a> was accepted at Translational Psychiatry.</li>
+						<li><span>2021.07.31</span><a href="https://doi.org/10.1016/j.jpsychires.2021.07.054">A co-author manuscript</a> was accepted at Journal of Psychiatric Research.</li>
 						<li><span>2021.02.05</span>ウェブサイトを立ち上げました。</li>
 					</ul>
 				</div>
