--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 					<ul class="h_n_ul">
 						<li><span>2022.09.09</span>2022年度アルコール・薬物依存関連学会合同学術総会で口頭発表しました。</li>
 						<li><span>2021.12.17</span>2021年度アルコール・薬物依存関連学会合同学術総会で口頭発表しました。</li>
-						<li><span>2021.12.14</span><a href="https://doi.org/10.1016/j.abrep.2021.100400">筆頭論文</a>がAddictive Behaviors Reportsに採択されました。</li>
+						<li><span>2021.12.14</span><a href="https://doi.org/10.1016/j.abrep.2021.100400">A lead-author manuscript</a> was accepted at Addictive Behaviors Reports.</li>
 					</ul>
 				</div>
 				<div class="btn animation">
@@ -151,7 +151,7 @@
 				</div>
 				<div class="h_n_area">
 					<ul class="h_n_ul">
-					  <li><span></span>公開できる予定はありません。</li>
+					  <li><span>2022.10.08</span>第22回日本認知療法・認知行動療法学会（JACT）の一般演題で発表予定です。</li>
 					</ul>
 					<div class="blur"></div>
 				</div>
