--- a/link.html
+++ b/link.html
@@ -69,10 +69,10 @@
 			<section class="section_t message">
 				<h2 class="animation">External Links</h2>
 				<p class="animation">
-					<a href="https://scholar.google.co.jp/citations?user=gJtBwZsAAAAJ&hl=en">Google Scholar</a><br>
-					<a href="https://researchmap.jp/toshitakahamamura/?lang=english">Research Map</a><br>
-					<a href="osf.io/nuhbp">Open Science Framework</a><br>
-					<a href="https://orcid.org/0000-0002-0719-1001">ORCiD</a>
+					Google Scholar: <a href="https://scholar.google.co.jp/citations?user=gJtBwZsAAAAJ&hl=en">My profile</a><br>
+					Research Map: <a href="https://researchmap.jp/toshitakahamamura/?lang=english">My profile</a><br>
+					Open Science Framework: <a href="https://osf.io/nuhbp">My profile</a><br>
+					ORCiD: <a href="https://orcid.org/0000-0002-0719-1001">My profile</a>
 					<br>
 				</p>
 			</section>
