--- a/profile_jp.html
+++ b/profile_jp.html
@@ -97,7 +97,7 @@
 					<ul class="p_ul">
 						<li class="pro_li">
 							<div class="pro_img">
-								<img src="./images/profile_pic_v01.png" alt="プロフィール画像">
+								<img src="./images/profile_pic_20221008.jpg" alt="プロフィール画像">
 							</div>
 							<div class="pro_name">
 								<div class="h3_title">
