--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			<section class="section_t message">
 				<h2 class="animation">Welcome to my personal website.</h2>
 				<p class="animation">
-					I am a researcher in Clinical Psychology and licensed therapist.<br>
+					I am a researcher in Clinical Psychology and licensed therapist. My current research focuses on problematic use of digital technology.<br>
 					*This website does not represent my affiliations in any way.<br>
 					<span>
 						=====<br>
@@ -116,7 +116,7 @@
 			<section class="section_t message">
 				<h2 class="animation">浜村俊傑のホームページへようこそ。</h2>
 				<p class="animation">
-				  公認心理師・臨床心理士として，研究と臨床に従事しています。何かのお役に立てれば幸いです。<br>
+				  公認心理師・臨床心理士として，研究と臨床に従事しています。現在はデジタル技術の問題使用に取り組んでいます。何かのお役に立てれば幸いです。<br>
 					＊このホームページは個人が運営するものであり，所属先の活動を反映するものではありません。<br>
 					<span>
 						=====<br>
@@ -133,6 +133,7 @@
 				</div>
 				<div class="h_n_area">
 					<ul class="h_n_ul">
+						<li><span>2022.11.11</span>第22回日本認知療法・認知行動療法学会（JACT）の一般演題で口頭発表しました。</li>
 						<li><span>2022.09.09</span>2022年度アルコール・薬物依存関連学会合同学術総会で口頭発表しました。</li>
 						<li><span>2021.12.17</span>2021年度アルコール・薬物依存関連学会合同学術総会で口頭発表しました。</li>
 						<li><span>2021.12.14</span><a href="https://doi.org/10.1016/j.abrep.2021.100400">A lead-author manuscript</a> was accepted at Addictive Behaviors Reports.</li>
@@ -151,7 +152,7 @@
 				</div>
 				<div class="h_n_area">
 					<ul class="h_n_ul">
-					  <li><span>2022.10.08</span>第22回日本認知療法・認知行動療法学会（JACT）の一般演題で発表予定です。</li>
+					  <li><span></span>公開できる予定はありません。</li>
 					</ul>
 					<div class="blur"></div>
 				</div>
