--- a/index.html
+++ b/index.html
@@ -133,9 +133,10 @@
 				</div>
 				<div class="h_n_area">
 					<ul class="h_n_ul">
+						<li><span>2022.11.21</span><a href="https://doi.org/10.31234/osf.io/2uzsd">A lead-author manuscript</a> was archived in preprint.</li>
 						<li><span>2022.11.11</span>第22回日本認知療法・認知行動療法学会（JACT）の一般演題で口頭発表しました。</li>
-						<li><span>2022.09.09</span>2022年度アルコール・薬物依存関連学会合同学術総会で口頭発表しました。</li>
-						<li><span>2021.12.17</span>2021年度アルコール・薬物依存関連学会合同学術総会で口頭発表しました。</li>
+						<li><span>2022.09.09</span>2022年度アルコール・薬物依存関連学会合同学術総会の一般演題で口頭発表しました。</li>
+						<li><span>2021.12.17</span>2021年度アルコール・薬物依存関連学会合同学術総会の一般演題で口頭発表しました。</li>
 						<li><span>2021.12.14</span><a href="https://doi.org/10.1016/j.abrep.2021.100400">A lead-author manuscript</a> was accepted at Addictive Behaviors Reports.</li>
 					</ul>
 				</div>
