--- a/news.html
+++ b/news.html
@@ -111,7 +111,9 @@
 				</div>
 				<div class="h_n_area">
 					<ul class="h_n_ul">
+						<li><span>2023.01.11</span><a href="https://osf.io/g9ep7">A co-author manuscript</a> was archived in preprint.</li>
 						<li><span>2022.12.20</span>第22回日本認知療法・認知行動療法学会（JACT）若手優秀演題賞（一般演題）を受賞しました。</li>
+						<li><span>2022.12.02</span>Visiting the Department of Psychology at National Taiwan University from Dec. 2 2022 to Jan. 30 2023 as a visiting scholar</li>
 						<li><span>2022.11.21</span><a href="https://doi.org/10.31234/osf.io/2uzsd">A lead-author manuscript</a> was archived in preprint.</li>
 						<li><span>2022.11.11</span>第22回日本認知療法・認知行動療法学会（JACT）の一般演題で口頭発表しました。</li>
 						<li><span>2022.09.09</span>2022年度アルコール・薬物依存関連学会合同学術総会の一般演題で口頭発表しました。</li>
