--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 			<section class="section_t message">
 				<h2 class="animation">Welcome to my personal website.</h2>
 				<p class="animation">
-					I am a researcher in Clinical Psychology and licensed therapist. My current research focuses on problematic use of digital technology.<br>
+					I am a researcher and licensed therapist in the field of Clinical PsychologyS. My current research focuses on both on utilization and problematic use of digital technology.<br>
 					*This website does not represent my affiliations in any way.<br>
 					<span>
-						=====<br>
+					=====<br>
 						
 					</span>
 				</p>
@@ -116,10 +116,10 @@
 			<section class="section_t message">
 				<h2 class="animation">浜村俊傑のホームページへようこそ。</h2>
 				<p class="animation">
-				  公認心理師・臨床心理士として，研究と臨床に従事しています。現在はデジタル技術の問題使用に取り組んでいます。何かのお役に立てれば幸いです。<br>
-					＊このホームページは個人が運営するものであり，所属先の活動を反映するものではありません。<br>
+				  公認心理師・臨床心理士として，研究と臨床に従事しています。現在はデジタル技術の応用と問題使用に取り組んでいます。<br>
+					＊このホームページは個人が運営するものであり，所属先の公表ではありません。<br>
 					<span>
-						=====<br>
+					=====<br>
 						
 					</span>
 				</p>
