--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			<section class="section_t message">
 				<h2 class="animation">Welcome to my personal website.</h2>
 				<p class="animation">
-					I am a researcher and licensed therapist in the field of Clinical PsychologyS. My current research focuses on both on utilization and problematic use of digital technology.<br>
+					I am a researcher and licensed psychothrapist in the field of Clinical Psychology. My current research focuses on both on utilization and problematic use of digital technology.<br>
 					*This website does not represent my affiliations in any way.<br>
 					<span>
 					=====<br>
