--- a/profile_en.html
+++ b/profile_en.html
@@ -116,17 +116,22 @@
 								<div class="p_titles">
 									<ol class="p_titles_ol">
 										<li class="pro_titles_li pro_name_li">
-											<b>JSPS Research Fellow,</b><br>
-											National Center for Cognitive Behavior Therapy and Research,<br>
-											National Center of Neurology and Psychiatry
+											<b>Visiting Scholar,</b><br>
+											Department of Psychology,
+											Flinders University
 										</li>
 										<li class="pro_titles_li pro_name_li">
-											<b>Research Fellow (PD),</b><br>
+											<b>JSPS Overseas Fellow,</b><br>
 											Japan Society for the Promotion of Science
 										</li>
 										<li class="pro_titles_li pro_name_li">
 											<b>Invited Researcher,</b><br>
 											KDDI Research, Inc.<br>
+										</li>
+										<li class="pro_titles_li pro_name_li">
+											<b>Visiting Researcher,</b><br>
+											National Center for Cognitive Behavior Therapy and Research,<br>
+											National Center of Neurology and Psychiatry
 										</li>
 									</ol>
 								</div>
