--- a/profile_jp.html
+++ b/profile_jp.html
@@ -116,13 +116,16 @@
 								<div class="p_titles">
 									<ol class="p_titles_ol">
 										<li class="pro_titles_li pro_name_li">
-											・国⽴研究開発法⼈国⽴精神・神経医療研究センター：認知⾏動療法センター：<b>外来研究員</b>
+											フリンダーズ大学心理学部：<b>客員研究員</b>
 										</li>
 										<li class="pro_titles_li pro_name_li">
-											・⽇本学術振興会：<b>特別研究員（PD）</b>
+											⽇本学術振興会：<b>海外特別研究員</b>
 										</li>
 										<li class="pro_titles_li pro_name_li">
-											・株式会社KDDI 総合研究所 健康⾏動変容グループ：<b>招聘研究員</b>
+											株式会社KDDI 総合研究所 健康⾏動変容グループ：<b>招聘研究員</b>
+										</li>
+										<li class="pro_titles_li pro_name_li">
+											国⽴研究開発法⼈国⽴精神・神経医療研究センター：認知⾏動療法センター：<b>外来研究員</b>
 										</li>
 									</ol>
 								</div>
@@ -139,28 +142,6 @@
 									</li>
 									<li class="pro_titles_li pro_name_li">
 										厚⽣労働省・⽂部科学省：<b>公認⼼理師</b>
-									</li>
-								</ol>
-							</div>
-							<div class="h3_title">
-								<h3 class="modi_f_pu">職歴</h3>
-							</div>
-							<div class="p_titles">
-								<ol class="p_titles_ol">
-									<li class="pro_titles_li">
-										2010年09⽉〜2012年06⽉ 発達障害団体（Developmental Disabilities Association）：<b>Residential Care Worker</b>
-									</li>
-									<li class="pro_titles_li">
-										2017年04⽉〜2019年03⽉ ⽇本学術振興会（受⼊機関／東京⼤学）：<b>特別研究員（DC2）</b>
-									</li>
-									<li class="pro_titles_li">
-										2019年04⽉〜2020年03⽉ 株式会社KDDI総合研究所：<b>研究員</b>
-									</li>
-									<li class="pro_titles_li">
-										2020年04⽉〜現在 ⽇本学術振興会（受⼊機関／国⽴精神・神経医療研究センター）：<b>特別研究員（PD）</b>
-									</li>
-									<li class="pro_titles_li">
-										2019年04⽉〜現在 株式会社KDDI総合研究所：<b>招聘研究員</b>
 									</li>
 								</ol>
 							</div>
