--- a/profile_en.html
+++ b/profile_en.html
@@ -116,13 +116,13 @@
 								<div class="p_titles">
 									<ol class="p_titles_ol">
 										<li class="pro_titles_li pro_name_li">
+											<b>JSPS Overseas Research Fellow,</b><br>
+											Japan Society for the Promotion of Science
+										</li>
+										<li class="pro_titles_li pro_name_li">
 											<b>Visiting Scholar,</b><br>
 											Department of Psychology,
 											Flinders University
-										</li>
-										<li class="pro_titles_li pro_name_li">
-											<b>JSPS Overseas Fellow,</b><br>
-											Japan Society for the Promotion of Science
 										</li>
 										<li class="pro_titles_li pro_name_li">
 											<b>Invited Researcher,</b><br>
