--- a/research.html
+++ b/research.html
@@ -103,6 +103,14 @@
 					<ul class="r_ul">
 						<li>
 							<div class="h3_title">
+								<h3>ゲーム症の解明と低減にむけた家族支援からの包括的アプローチ</h3>
+								<p>2023.4<br>
+								<span>～現在</span></p>
+							</div>
+							<p>日本学術振興会 海外特別研究員制度（研究代表者）</p>
+						</li>
+						<li>
+							<div class="h3_title">
 								<h3>児童青年のインターネットゲーム障害の病態及び心理社会的リスク要因の解明</h3>
 								<p>2021.4<br>
 								<span>～現在</span></p>
@@ -116,14 +124,6 @@
 								<span>～現在</span></p>
 							</div>
 							<p>日本学術振興会 科学研究費助成事業（若手研究；研究代表者）</p>
-						</li>
-						<li>
-							<div class="h3_title">
-								<h3>⾏思春期における行動依存への支援と関連障害の解明</h3>
-								<p>2020.4<br>
-								<span>～現在</span></p>
-							</div>
-							<p>日本学術振興会 科学研究費助成事業（特別研究員奨励費；研究代表者）</p>
 						</li>
 					</ul>
 				</div>
@@ -155,6 +155,22 @@
 				</div>
 				<div class="r_area">
 					<ul class="r_ul">
+						<li>
+							<div class="h3_title">
+								<h3>ギャンブル等依存 症問題の実態調査の実施方法の策定に係る検討</h3>
+								<p>2022.11<br>
+								<span>～2023.3</span></p>
+							</div>
+							<p>厚生労働省 令和４年度障害者総合福祉推進事業費補助金（研究分担者）</p>
+						</li>
+						<li>
+							<div class="h3_title">
+								<h3>⾏思春期における行動依存への支援と関連障害の解明</h3>
+								<p>2020.4<br>
+								<span>～2023.3</span></p>
+							</div>
+							<p>日本学術振興会 科学研究費助成事業（特別研究員奨励費；研究代表者）</p>
+						</li>
 						<li>
 							<div class="h3_title">
 								<h3>ネガティブな気分回復における期待感の役割：文化的および発達的検討</h3>
