--- a/research.html
+++ b/research.html
@@ -103,6 +103,14 @@
 					<ul class="r_ul">
 						<li>
 							<div class="h3_title">
+								<h3>インターネット・ゲームの問題使用に対する認知行動療法の有効性検証</h3>
+								<p>2023.4<br>
+								<span>～現在</span></p>
+							</div>
+							<p>日本学術振興会 科学研究費助成事業（基盤Ｂ；研究代表者）</p>
+						</li>
+						<li>
+							<div class="h3_title">
 								<h3>ゲーム症の解明と低減にむけた家族支援からの包括的アプローチ</h3>
 								<p>2023.4<br>
 								<span>～現在</span></p>
